# skill-os

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ETHOS.md  LICENSE  README.md  ROADMAP.md  SKILLS.md  allowed-tools.yaml  restructured-org-chart-v3.md  status.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-skill.md  skill-improvement.md
.github/workflows/: validate.yml
.specify/memory/: constitution.md
adapters/crewai/: README.md  __init__.py  agent.py  crew.py  pyproject.toml  skill.py  task.py
adapters/langgraph/: README.md  __init__.py  graph.py  node.py  pyproject.toml  skill.py
agents/account-executive/: expansion-motion-sales.md  sales-signal-collector.md  sales-signal-synthesizer.md
agents/account-management-lead/: opportunity-framer-am.md  sales-playbook-am.md  sales-signal-synthesizer-am.md
agents/account-manager/: expansion-motion-am.md
agents/agent-configuration-manager/: benefits-setup-v1.md  equity-programme-manager.md
agents/agent-operations-manager/: first-hire-process-builder.md  hiring-plan-builder.md
agents/agent-trainer-skill-optimizer/: compliance-training-manager.md  skills-gap-analyser.md  technical-skills-programme.md
agents/ai-ml-engineer/: ai-feasibility-assessor.md  model-trainer.md
agents/analyst-relations-manager/: analyst-briefing-scheduler.md  analyst-inquiry-responder.md  magic-quadrant-strategy.md  peer-review-platform-manager.md
agents/analytics-lead/: alerting-configurator-data.md  effort-estimator-data.md  goal-framer-data.md  instrumentation-clarity-reviewer.md  instrumentation-planner-data.md  instrumentation-spec-data.md  market-sizer-data.md  north-star-metric-reviewer-data.md  (+2 more)
paperclip/: QUICKSTART.md  README.md  role-mapping.md  skill-binding-schema.yaml  skill-routing-table.yaml
scripts/: add_triggers.py  add_triggers_engineering.py  reorganize.py  score.py  search.py  test_skill.py  validate.py
slack-app/: .env.example  .gitignore  README.md  app.py  llm.py  requirements.txt  scheduler.py  storage.py
(+3300 files in other folders)
