[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skill-os-langgraph"
version = "0.1.0"
description = "LangGraph adapter for Skill OS — load any SKILL.md as a LangGraph node"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["langgraph", "langchain", "agents", "skill-os", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# Core has zero external dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
anthropic = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
]
openai = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.1",
]
dev = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["../.."]
include = ["adapters.langgraph*"]

[tool.setuptools.package-dir]
"skill_os_langgraph" = "."
